[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stonekeep"
version = "0.2.0"
description = "Zero-dependency client for Stonekeep credential and secrets management"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
